tui/tests/snapshots/view_snapshots__responsive_boundary_160x18.snap
---
source: tui/tests/view_snapshots.rs
expression: rendered
---
                                Session 1  ·  Agent

                                  › Summarize the release plan.
                                    ✓  Agent action · completed
                                  ◆ Garive
                                    ## Release plan

                                    • Verify the Runtime
                                    • Ship with evidence

                                    cargo test passes.




                                Agent running ·  Esc cancel Turn
                                › Ask a follow-up…
