tui/tests/snapshots/view_snapshots__responsive_boundary_39x18.snap
---
source: tui/tests/view_snapshots.rs
expression: rendered
---
Garive needs 40 columns
Resize terminal · draft retained
Run continues · Esc cancel
