tui/tests/snapshots/view_snapshots__responsive_boundary_40x18.snap
---
source: tui/tests/view_snapshots.rs
expression: rendered
---

› Summarize the release plan.
  ✓ Agent action · completed
• ## Release plan

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.






              Working…  ·  Esc interrupt
› Ask a follow-up…
