tui/tests/snapshots/view_snapshots__responsive_boundary_51x18.snap
---
source: tui/tests/view_snapshots.rs
expression: rendered
---
Session 1                             Agent running

  › Summarize the release plan.
    ✓ Agent action · completed
  ◆ Garive
    ## Release plan
    • Verify the Runtime
    • Ship with evidence
    cargo test passes.





╭ › ──────────────────────────────────────────────╮
│ Ask a follow-up…                                │
╰─────────────────────────────────────────────────╯
  Esc cancel run
