tui/tests/snapshots/view_snapshots__responsive_boundary_79x18.snap
---
source: tui/tests/view_snapshots.rs
expression: rendered
---
› Summarize the release plan.
• Completed
  └ Read file

## Release plan

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.



• Working…  ·  esc to interrupt


› Ask a follow-up…
                                                                    Session 1
