tui/tests/snapshots/view_snapshots__session_picker_scrolled_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&sessions, Theme::Mono, 100, 24)"
---

› Summarize the release plan.
                   ╭ Switch session ────────────────────────────────────────────╮
                   │                                                            │
                   │  Filter  type to search                                    │
                   │    Session 4 · Agent   ● running                           │
                   │    Session 5 · Agent   ● running                           │
                   │    Session 6 · Agent   ● running                           │
                   │    Session 7 · Agent   ● running                           │
                   │    Session 8 · Agent   ● running                           │
                   │    Session 9 · Agent   ● running                           │
                   │    Session 10 · Agent   ● running                          │
                   │    Session 11 · Agent   ● running                          │
                   │  › Session 12 · Agent   ● running                          │
                   │                                                            │
                   │    ↑/↓ select   Enter open   Esc close                     │
                   │                                                            │
                   ╰────────────────────────────────────────────────────────────╯



                                                                                            Working…
› Ask a follow-up…
