tui/tests/snapshots/view_snapshots__standard_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&model, Theme::Dark, 100, 24)"
---
  Session 1  ·  research-age                                                               running

    You
      Summarize the release plan.
      ✓  Agent action · completed
    ◆ Garive
      ## Release plan
      • Verify the Runtime
      • Ship with evidence
      cargo test passes.










  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ Ask a follow-up…                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
    Esc cancel run
